Add booking-slot filter by preffered bloodbank
